[package]
name = "hackrf-dsp"
version = "0.1.0"
authors = ["cho45 <cho45@lowreal.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
rustfft = "6.4"
console_error_panic_hook = { version = "0.1", optional = true }
num-complex = "0.4.6"
js-sys = "0.3.87"

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "receiver_criterion"
harness = false

[[bench]]
name = "fm_stereo_criterion"
harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[profile.bench]
# 実行速度の最大化 (本番の opt-level = "z" と乖離している点に注意。純粋なアルゴリズム評価用)
opt-level = 3
# クレート間の最適化を有効化し、インライン化によるパフォーマンスを正確に計測する
lto = "thin"
# 分割コンパイルによる境界での最適化阻害を防ぐ
codegen-units = 1
# プロファイリング(Flamegraph等)でボトルネックを観測するためにデバッグシンボルを残す(実行速度に影響なし)
debug = true
# キャッシュによる最適化のブレを防ぎ、計測の再現性を担保するため無効化
incremental = false
